Some Changes done

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 				</div>
 				<div class="row justify-content-center mt-1">
 					<div class="col-md-6 text-center ftco-animate">
-						<p><a download="Jagmohan_Rai-Resume.pdf" href="images/UpdatedResume.pdf"
+						<p><a download="MainResume.pdf" href="images/MainResume.pdf"
 								class="btn btn-primary py-3 px-5">Download Resume</a></p>
 					</div>
 				</div>
@@ -798,7 +798,7 @@
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
 						<p><a
-								href="https://drive.google.com/file/d/1wWuERWZ-qp4JgzNfAE99plwh3lmqU4vH/view?usp=sharing">resumelink</a>
+								href="https://drive.google.com/file/d/1K2VnJlitr1lnuuoQbZDZdRF7zSNnTq6Q/view?usp=sharing">resumelink</a>
 						</p>
 					</div>
 				</div>
