--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 				</div>
 				<div class="row justify-content-center mt-1">
 					<div class="col-md-6 text-center ftco-animate">
-						<p><a download="MainResume.pdf" href="images/MainResume.pdf"
+						<p><a download="Jagmohan_Resume.pdf" href="images/Jagmohan_Resume.pdf"
 								class="btn btn-primary py-3 px-5">Download Resume</a></p>
 					</div>
 				</div>
