--- a/index.html
+++ b/index.html
@@ -571,6 +571,26 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
+						<a href="https://github.com/jagmohan123/ApplySeekerBackend" class="block-20 zoom-effect"
+							style="background-image: url('images/applySeeker.png');">
+						</a>
+						<div class="text mt-3 float-right d-block">
+
+							<h3 class="heading">
+								<!-- live ka link -->
+								<a href="https://github.com/jagmohan123/ApplySeekerBackend">ApplySeeker Jobplateform Website</a>
+							</h3>
+							<p>The Apply Seeker Website will serve as a vital tool for both employers and job seekers, 
+								enhancing the recruitment process through innovative features and a user-centric approach.
+								By leveraging cutting-edge technology and maintaining a focus on usability, 
+								the platform will bridge the gap between job opportunities and qualified candidates,
+								fostering a dynamic and efficient employment ecosystem.</p>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-4 d-flex ftco-animate">
+					<div class="blog-entry justify-content-end">
 						<a href="https://github.com/jagmohan123/Study-Adda" class="block-20 zoom-effect"
 							style="background-image: url('images/studyAdda.png');">
 						</a>
