--- a/index.html
+++ b/index.html
@@ -571,14 +571,14 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/jagmohan123/ApplySeekerBackend" class="block-20 zoom-effect"
+						<a href="https://github.com/jagmohan123/ApplySeekerFrontend" class="block-20 zoom-effect"
 							style="background-image: url('images/applySeeker.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading">
 								<!-- live ka link -->
-								<a href="https://github.com/jagmohan123/ApplySeekerBackend">ApplySeeker Jobplateform Website</a>
+								<a href="https://apply-seeker.netlify.app/">ApplySeeker Jobplateform Website</a>
 							</h3>
 							<p>The Apply Seeker Website will serve as a vital tool for both employers and job seekers, 
 								enhancing the recruitment process through innovative features and a user-centric approach.
@@ -591,7 +591,7 @@
 				
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/jagmohan123/Study-Adda" class="block-20 zoom-effect"
+						<a href="https://github.com/jagmohan123/EdTechFrontEnd" class="block-20 zoom-effect"
 							style="background-image: url('images/studyAdda.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
@@ -599,7 +599,7 @@
 							<h3 class="heading">
 								<!-- live ka link -->
 								<a
-									href="https://github.com/jagmohan123/Study-Adda">Study
+									href="https://studyaddal.netlify.app/">Study
 									Adda Edtech Website</a>
 							</h3>
 							<p>A seamless and interactive learning experience for students, making education
