--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
-						<a href="https://github.com/jagmohan123/Netflix-Full-Stack-Clone" class="block-20 zoom-effect"
+						<a href="https://github.com/jagmohan123/Netflix-Frontend" class="block-20 zoom-effect"
 							style="background-image: url('images/NetflixClone.jpeg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
@@ -620,7 +620,7 @@
 							<h3 class="heading">
 								<!-- live ka link -->
 								<a
-									href="https://github.com/jagmohan123/Netflix-Full-Stack-Clone">NetflixClone
+									href="https://netflix-clone-s.netlify.app">NetflixClone
 									FullStack Clone</a>
 							</h3>
 							<p> Implement NetFlix’s core functionalities, including user authentication, content
