--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
 								<br>
 								<br>
-								<h2>Frontend Developer</h2>
+								<h2>MERN Stack Developer</h2>
 								<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 								<!-- <br> -->
 								<p><a href="https://www.linkedin.com/in/jagmohan-rai1"
@@ -426,7 +426,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="10">0</span> <span>+</span>
+									<span class="number" data-number="30">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/jagmohan-rai1"
@@ -456,7 +456,7 @@
 				</div>
 				<div class="row justify-content-center mt-1">
 					<div class="col-md-6 text-center ftco-animate">
-						<p><a download="Jagmohan_Resume.pdf" href="images/Jagmohan_Resume.pdf"
+						<p><a download="Resume_Jagmohan.pdf" href="images/Resume_Jagmohan.pdf"
 								class="btn btn-primary py-3 px-5">Download Resume</a></p>
 					</div>
 				</div>
@@ -720,7 +720,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18">
 						<div class="text">
-							<strong class="number" data-number="250"> + </strong>
+							<strong class="number" data-number="280"> + </strong>
 							<span>Solved DSA problems</span>
 						</div>
 					</div>
@@ -802,7 +802,7 @@
 						</div>
 						<h3 class="mb-4">Download Resume</h3>
 						<p><a
-								href="https://drive.google.com/file/d/1K2VnJlitr1lnuuoQbZDZdRF7zSNnTq6Q/view?usp=sharing">resumelink</a>
+						 href="https://drive.google.com/file/d/1gf9MKnS58NcIRQMtU1ZjCHk2R1fZEF02/view?usp=sharing">resumelink</a>
 						</p>
 					</div>
 				</div>
