--- a/index.html
+++ b/index.html
@@ -572,13 +572,13 @@
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<a href="https://github.com/jagmohan123/ApplySeekerFrontend" class="block-20 zoom-effect"
-							style="background-image: url('images/applySeeker.png');">
+							style="background-image: url('images/applySeeker1.png');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
 							<h3 class="heading">
 								<!-- live ka link -->
-								<a href="https://apply-seeker.netlify.app/">ApplySeeker Jobplateform Website</a>
+								<a href="https://applyseeker.netlify.app/">ApplySeeker Jobplateform Website</a>
 							</h3>
 							<p>The Apply Seeker Website will serve as a vital tool for both employers and job seekers, 
 								enhancing the recruitment process through innovative features and a user-centric approach.
@@ -620,7 +620,7 @@
 							<h3 class="heading">
 								<!-- live ka link -->
 								<a
-									href="https://netflix-clone-s.netlify.app">NetflixClone
+									href="https://netflixclon.netlify.app/">NetflixClone
 									FullStack Clone</a>
 							</h3>
 							<p> Implement NetFlix’s core functionalities, including user authentication, content
