--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
 						<a href="https://github.com/jagmohan123/Netflix-Frontend" class="block-20 zoom-effect"
-							style="background-image: url('images/NetflixClone.jpeg');">
+							style="background-image: url('images/NetflixClone1.jpeg');">
 						</a>
 						<div class="text mt-3 float-right d-block">
 
