--- a/index.html
+++ b/index.html
@@ -571,6 +571,25 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry justify-content-end">
+						<a href="https://github.com/jagmohan123/EcomerceFrontend" class="block-20 zoom-effect"
+							style="background-image: url('images/shopping24.png');">
+						</a>
+						<div class="text mt-3 float-right d-block">
+
+							<h3 class="heading">
+								<!-- live ka link -->
+								<a href="https://shoping24k.netlify.app/">Shopping24 Ecommerce Website</a>
+							</h3>
+							<p>Developed and launched Shopping 24, a fully functional e-commerce website,
+						        using the MERN stack (MongoDB, ExpressJS, ReactJS, NodeJS). Developed comprehensive modules for admin and user.
+							Where admin can create and manage product categories. Add, edit,delete, and manage product listings.
+							Users can browse and shop for all available items. Managed shopping carts and adjusteditem quantities. 
+							Completed purchases using Razorpay payment gateway.Viewed order history and managed profiles.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 d-flex ftco-animate">
+					<div class="blog-entry justify-content-end">
 						<a href="https://github.com/jagmohan123/ApplySeekerFrontend" class="block-20 zoom-effect"
 							style="background-image: url('images/applySeeker1.png');">
 						</a>
