--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 				</div>
 				<div class="row justify-content-center mt-1">
 					<div class="col-md-6 text-center ftco-animate">
-						<p><a download="Resume_Jagmohan.pdf" href="images/Resume_Jagmohan.pdf"
+						<p><a download="ResumeJagmohanRai.pdf" href="images/ResumeJagmohanRai.pdf"
 								class="btn btn-primary py-3 px-5">Download Resume</a></p>
 					</div>
 				</div>
